# PySlice

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/sea-eco/: README.md  pyproject.toml  setup.py
tests/sea-eco/docs/: api_reference.rst  conf.py  getting_started.md  index.rst  mission_and_architecture.md  readers.md  requirements.txt  signal_processing.md
tests/sea-eco/docs/_build/html/: api_reference.html  architecture.html  colors.html  examples.html  genindex.html  getting_started.html  index.html  (+8 more)
tests/sea-eco/docs/examples/: basic_usage.ipynb
tests/sea-eco/examples/: Basic usage.ipynb
tests/sea-eco/examples/.ipynb_checkpoints/: Basic usage-checkpoint.ipynb
tests/sea-eco/examples/Models/: gaussians.ipynb
tests/sea-eco/examples/example_data/: Aquire - _Acquire-EELS-4.ndata1  Aquire - _Acquire-EELS-Image-3.ndata1  Aquire - _Acquire-HAADF-2.ndata1  Aquire - _Acquire-MAADFBF-2.ndata1  Aquire - _Acquire-Ronchigram-1.ndata1  Sequence - Sequence Synchronized EELS 7.ndata1  Sequence-Synchronized-HAADF-7.ndata1  Sequence-Synchronized-MAADFBF-7.ndata1  Snapshots - _Dectris-ELA-Display-Snapshot 1.ndata1  Snapshots - _Dectris-ELA-Display-Snapshot.ndata1  Snapshots - _Ronchi-Orca-1-Display-Snapshot.ndata1  Snapshots - _SuperScan-HAADF-Display-Snapshot.ndata1  Snapshots - _SuperScan-MAADFBF-Display-Snapshot.ndata1  SuperScan-HAADF.ndata1  SuperScan-MAADFBF.ndata1  Tableau dectris_ela 8.ndata1
tests/sea-eco/examples/thrird_party_readers/: Nion.ipynb
tests/sea-eco/tests/: piptesting.sh
tests/sea-eco/utils/: __init__.py  geometry.py  swiftthumbnailer.py
(+171 files in other folders)
