[project]
name = "sea-eco"
version = "0.0.1beta"
description = "Architecture and basic tules for the SEA ecosystem"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Eric Hoglund", email = "hoglunder@ornl.gov"},
    {name = "Thomas Pfeifer", email = "pfeifertw@ornl.gov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "h5py>=3.15.1",
    "pip>=25.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "myst-parser",
    "sphinx-rtd-theme>=3.0.2",
    "nbsphinx>=0.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser",
    "nbsphinx>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pySEA*"]
namespaces = true

[tool.setuptools.package-data]
pySEA = ["py.typed"]

#[tool.pytest.ini_options]
#testpaths = ["tests"]
#python_files = ["test_*.py"]
#python_classes = ["Test*"]
#python_functions = ["test_*"]
